create function that generates all possible solutions of row/col

--- a/project.cabal
+++ b/project.cabal
@@ -32,6 +32,7 @@ library
       Model
       Solver
       Utils
+      Algorithms
   other-modules:
       Paths_project
   hs-source-dirs:
@@ -51,3 +52,14 @@ executable project-exe
       base >=4.7 && <5
     , project
   default-language: Haskell2010
+
+test-suite unit-tests
+  exposed-modules:
+      Algorithms.AllSolutionsSpec
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  hs-source-dirs: test
+  build-depends: base
+            , project
+            , hspec
+            , hspec-discover
