--- a/project.cabal
+++ b/project.cabal
@@ -34,12 +34,14 @@ library
       Utils
       Algorithms
       Mappers
+      Output
   other-modules:
       Paths_project
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+      , ansi-terminal
   default-language: Haskell2010
 
 executable project-exe
@@ -52,6 +54,7 @@ executable project-exe
   build-depends:
       base >=4.7 && <5
     , project
+    , ansi-terminal
   default-language: Haskell2010
 
 test-suite unit-tests
